# yonder-ynab

./: .gitignore  Cargo.toml  README.md  flake.nix  wrangler.toml  ynab_openapi.yml  yonder.csv
src/: config.rs  lib.rs
